ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 4.4.0-rc6, 4.7.0
    • Affects Version/s: 4.3.5
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v4.4
    • Security 2020-04-20, Security 2020-05-04, Security 2020-05-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When I try to run mongod with GSSAPI authentication mechanism, it seems that there are multiple configuration problems that cause the server to dump core.

      Test case #1: no kerberos configuration present on the system at all.

      To reproduce, build a docker image from this dockerfile: https://github.com/p-mongo/tests/blob/master/server-gssapi-crash-1/Dockerfile

      Actual result: https://gist.github.com/p-mongo/0d32544a51ed7c31fbb557a287609193

      Test case #2: kerberos is configured but there aren't any keytabs defined.

      To reproduce, build a docker image from this dockerfile: https://github.com/p-mongo/tests/blob/master/server-gssapi-crash-2/Dockerfile

      Actual result: https://gist.github.com/p-mongo/a6867c5634a618a20f6eab4d4961762a

      Expected result: server produces an error message and exits but does not dump core.

            Assignee:
            Shreyas Kalyan (Inactive)
            Reporter:
            Oleg Pudeyev (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: