SERVER-47262 Server dumps core if started with GSSAPI auth mechanism and there is a configuration problem

GitOrigin-RevId: 21d7f7817dd83600d975c6b25a1f3fc08447c716